# advent-of-code

./: .gitignore  CMakeLists.txt  Intcode.hs  README.md  day1-input.txt  day1-no-do.hs  day1.hs  day10.hs  day11.hs  day12.hs  day13.hs  day14.hs  day15.hs  day16.hs  day17.hs  day18.hs  day2-no-do.hs  day2.hs  day3.hs  day4.hs  day5.hs  day6.hs  day7.hs  day8.hs  day9.hs
advent-of-code-2019/: Intcode.hs  day1.hs  day11.hs  day16.hs  day3.hs  day6.hs  day8.hs  day9.hs  intcode-tester.hs  test.hs
advent-of-code-2019/day18/: Day18.hs  DictionaryTest.hs  FindKeyDistances.hs  FindShortestPath.hs  day18-input-4-short.txt
advent-of-code-2020/day1/: day1-2.cpp  day1.cpp  help.h
advent-of-code-2020/day2/: day2-1.cpp  day2-2.cpp
advent-of-code-2020/day3/: day3-1.cpp
advent-of-code-2020/help/: filehelp.h
day1/: day1-2.cpp  day1.cpp  help.cpp  help.h
day18/: FindKeyDistancesTest.hs  FindShortestPath.hs  FindShortestPathTest.hs  Grid.hs  KeyDoorMazeWorld.hs  day18-good-but-futile.hs  testpractice.hs
day2/: day2-1.cpp  day2-1.h
day3/: day3-2.cpp
help/: filehelp.cpp
